fix bugs horizontal slide on firefox

--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -15,6 +15,8 @@
     flex-flow: column;
     gap: 20px;
   }
+
+  overflow-x: hidden;
 }
 
 .userInfoSection {
